--- a/AMPS/res/values/strings.xml
+++ b/AMPS/res/values/strings.xml
@@ -3,9 +3,13 @@
 
     <string name="app_name">AMPS</string>
     <string name="hello_world">Hello world!</string>
-    <string name="projects">Projects</string>
-    <string name="action_settings">Toolbar</string>
+    <string name="collections">Collections</string>
     <string name="action_overflow">Menu</string>
+    <string name="workingassets">Working Assets</string>
+    <string name="projects">Projects</string>
+    <string name="folder">Folder</string>
+    <string name="search">Search</string>
+    <string name="report">Report</string>
     <string name="home">Home</string>
     <string name="admin">Admin</string>
     <string name="profile">Profile</string>
@@ -99,8 +103,10 @@
         <item>Client D</item>
     </string-array>
 
-    
-    
     <string name="title_fragment_search">SearchFragment</string>
     <string name="title_fragment_report">ReportFragment</string>
+    <string name="title_activity_report">ReportActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_search">SearchActivity</string>
+
 </resources>
