--- a/AMPS/res/values/strings.xml
+++ b/AMPS/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="help">Help</string>
     <string name="logout">Logout</string>
     <string name="title_activity_login">LoginActivity</string>
-    <string name="user_name">Username</string>
+    <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="button_login">Login</string>
     <string name="button_cancel">Cancel</string>
@@ -30,7 +30,6 @@
     <string name="title_activity_main_tab_menu">MainTabMenu</string>
     <string name="title_activity_profile_tab_menu">MainActivity</string>
     <string name="title_activity_profile">ProfileActivity</string>
-    <string name="username">Username</string>
     <string name="displayname">Display Name</string>
     <string name="firstname">First Name</string>
     <string name="lastname">Last Name</string>
@@ -108,5 +107,9 @@
     <string name="title_activity_report">ReportActivity</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_search">SearchActivity</string>
+    <string name="title_activity_working_assets">WorkingAssetsActivity</string>
+    <string name="title_activity_project_list">ProjectListActivity</string>
+    <string name="name">Name</string>
+    <string name="status">Status</string>
 
 </resources>
