--- a/AMPS/res/values/strings.xml
+++ b/AMPS/res/values/strings.xml
@@ -110,5 +110,11 @@
     <string name="title_activity_project_list">ProjectListActivity</string>
     <string name="name">Name</string>
     <string name="status">Status</string>
+    <string name="preview">Preview</string>
+    <string name="details">Details</string>
+    <string name="title_fragment_working_assets_properties">WorkingAssetsPropertiesFragment</string>
+    <string name="title_fragment_working_assets_comments">WorkingAssetsCommentsFragment</string>
+    <string name="title_fragment_working_assets_revisions">WorkingAssetsRevisionsFragment</string>
+    <string name="title_fragment_working_assets_log_history">WorkingAssetsLogHistoryFragment</string>
 
 </resources>
