--- a/AMPS/res/values/strings.xml
+++ b/AMPS/res/values/strings.xml
@@ -112,6 +112,7 @@
     <string name="status">Status</string>
     <string name="preview">Preview</string>
     <string name="details">Details</string>
+    <string name="title_fragment_working_assets_preview">WorkingAssetsPreviewFragment</string>
     <string name="title_fragment_working_assets_properties">WorkingAssetsPropertiesFragment</string>
     <string name="title_fragment_working_assets_comments">WorkingAssetsCommentsFragment</string>
     <string name="title_fragment_working_assets_revisions">WorkingAssetsRevisionsFragment</string>
@@ -140,5 +141,8 @@
     <string name="revision">Revision</string>
     <string name="user">User</string>
     <string name="date">Date</string>
+    <string name="revisionno">Revision No</string>
+    <string name="uploadedby">Uploaded By</string>
+    <string name="uploadeddate">Uploaded Date</string>
 
 </resources>
